trunk/Archive2/89/7c59d8de20ddc8/output
main.cpp:23:2: error: no newline at end of file [-Werror,-Wnewline-eof]
}
 ^
1 error generated.
